[tool.poetry]
name = "ropify"
version = "0.1.0"
description = "A command line interface for the Rope python refactoring library"
authors = ["Nicola De Angeli <112023843+niqodea@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rope = "^1.10.0"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
ruff = "^0.1.2"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
