[tool.poetry]
name = "ropify"
version = "0.1.0"
description = "A command line interface for the Rope python refactoring library"
authors = ["Nicola De Angeli <112023843+niqodea@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rope = "^1.10.0"
click = "^8.1.7"
setuptools = "^68.2.2"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
ruff = "^0.1.2"
mypy = "^1.6.1"

# ignore mypy missing imports for rope
[[tool.mypy.overrides]]
module = "rope.*"
ignore_missing_imports = true

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # Pyflakes
  "UP",  # pyupgrade
  "B",  # flake8-bugbear
  "SIM",  # flake8-simplify
  "I",  # isort
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
