[tool.poetry]
name = "ropify"
version = "0.1.0"
description = "A command line interface for the Rope python refactoring library"
authors = ["Nicola De Angeli <112023843+niqodea@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

click = "^8.1.7"
rope = "^1.10.0"
setuptools = "^68.2.2"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
mypy = "^1.6.1"
ruff = "^0.1.2"

[tool.poetry.scripts]
ropify = 'ropify.__main__:main'

# ignore mypy missing imports for rope
[[tool.mypy.overrides]]
module = "rope.*"
ignore_missing_imports = true

[tool.ruff.lint]
select = [
  "B",  # flake8-bugbear
  "E",  # pycodestyle
  "F",  # Pyflakes
  "I",  # isort
  "SIM",  # flake8-simplify
  "UP",  # pyupgrade
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
